eb-600 buttons driver added Signed-off-by: Alexandr Tsidaev <a.tsidaev@gmail.com>

--- a/drivers/input/keyboard/Kconfig
+++ b/drivers/input/keyboard/Kconfig
@@ -365,4 +365,13 @@ config KEYBOARD_LBOOK_V3
          To compile this driver as a module, choose M here: the
          module will be called gpio-keys.
 
+config KEYBOARD_EB600
+       tristate "Netronix EB-600 reader buttons"
+       depends on GENERIC_GPIO && ARCH_EB600
+       help
+         Driver for Netronix EB-600 eink reader keys.
+
+         To compile this driver as a module, choose M here: the
+         module will be called gpio-keys.
+
 endif
